UC#1 Integration